# sph_warp

./: .gitmodules  README.md  main.py  pyproject.toml
src/sph_warp/: __init__.py  constants.py  geometry.py  kernels.py  render.py  sph.py  sph_coupling.py
src/sph_warp/kernels/: __init__.py  rigid.py  sph.py
