[project]
name = "sph-warp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ryanchaiyakul", email = "ryanchaiyakul@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "newton",
    "pyglet>=2.1.13",
    "usd-core>=26.3",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "external/newton",
]

[tool.uv.sources]
newton = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
