[project]
name = "sph-warp"
version = "0.1.0"
description = "WCSPH implementation for Newton."
readme = "README.md"
authors = [
    { name = "ryanchaiyakul", email = "ryanchaiyakul@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "imgui-bundle>=1.92.5",
    "newton>=1.0.0",
    "pillow>=12.1.1",
    "pyglet>=2.1.13",
    "usd-core>=26.3",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
